// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup snapshot renders correctly 1`] = `
<Popup
  afterClose={[MockFunction]}
  animationDuration={200}
  destroy={true}
  direction="bottom"
  lockScroll={true}
  mask={true}
  onMaskClick={[MockFunction]}
  visible={false}
>
  <CSSTransition
    classNames="za-slide-up"
    in={false}
    mountOnEnter={true}
    nodeRef={
      Object {
        "current": null,
      }
    }
    onEnter={[Function]}
    onExited={[Function]}
    timeout={200}
    unmountOnExit={true}
  >
    <Transition
      appear={false}
      enter={true}
      exit={true}
      in={false}
      mountOnEnter={true}
      nodeRef={
        Object {
          "current": null,
        }
      }
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={200}
      unmountOnExit={true}
    />
  </CSSTransition>
</Popup>
`;

exports[`Popup snapshot renders mount node correctly 1`] = `
<Popup
  afterClose={[MockFunction]}
  animationDuration={200}
  destroy={true}
  direction="bottom"
  lockScroll={true}
  mask={true}
  mountContainer={[Function]}
  onMaskClick={[MockFunction]}
  visible={true}
>
  <CSSTransition
    classNames="za-slide-up"
    in={true}
    mountOnEnter={true}
    nodeRef={
      Object {
        "current": <div
          class="za-popup za-popup--bottom"
          style="transition-duration: 200ms;"
        >
          foo
        </div>,
      }
    }
    onEnter={[Function]}
    onExited={[Function]}
    timeout={200}
    unmountOnExit={true}
  >
    <Transition
      appear={false}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={true}
      nodeRef={
        Object {
          "current": <div
            class="za-popup za-popup--bottom"
            style="transition-duration: 200ms;"
          >
            foo
          </div>,
        }
      }
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={200}
      unmountOnExit={true}
    >
      <Portal
        containerInfo={
          <body
            style="overflow: hidden;"
          >
            <div
              class="za-mask"
              style="background-color: rgba(0, 0, 0, 0.55);"
            />
            <div
              class="za-popup__wrapper"
            >
              <div
                class="za-popup za-popup--bottom"
                style="transition-duration: 200ms;"
              >
                foo
              </div>
            </div>
          </body>
        }
      >
        <Trigger
          disabled={false}
          onClose={[Function]}
          visible={true}
        >
          <Mask
            color="black"
            destroy={true}
            mountContainer={false}
            onClick={[Function]}
            opacity="normal"
            visible={true}
          >
            <CSSTransition
              classNames="za-fade"
              in={true}
              mountOnEnter={true}
              nodeRef={
                Object {
                  "current": <div
                    class="za-mask"
                    style="background-color: rgba(0, 0, 0, 0.55);"
                  />,
                }
              }
              onEnter={[Function]}
              onExited={[Function]}
              timeout={300}
              unmountOnExit={true}
            >
              <Transition
                appear={false}
                enter={true}
                exit={true}
                in={true}
                mountOnEnter={true}
                nodeRef={
                  Object {
                    "current": <div
                      class="za-mask"
                      style="background-color: rgba(0, 0, 0, 0.55);"
                    />,
                  }
                }
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={300}
                unmountOnExit={true}
              >
                <div
                  className="za-mask"
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "rgba(0, 0, 0, 0.55)",
                      "display": undefined,
                    }
                  }
                />
              </Transition>
            </CSSTransition>
          </Mask>
          <div
            className="za-popup__wrapper"
            style={
              Object {
                "display": undefined,
              }
            }
          >
            <div
              className="za-popup za-popup--bottom"
              style={
                Object {
                  "WebkitTransitionDuration": "200ms",
                  "transitionDuration": "200ms",
                  "width": undefined,
                }
              }
            >
              foo
            </div>
          </div>
        </Trigger>
      </Portal>
    </Transition>
  </CSSTransition>
</Popup>
`;
